# NodalThermalSim

./: LICENSE  Makefile  README.md  Spec.rst  environment.yml  house_room.py  setup.cfg
.github/workflows/: python-package-conda.yml
examples/: house_room.py
ressources/: papers.txt
src/: Component.py  Component2D.py  Grid.py  Physics.py  Solver.py  TODO.md
src/NodalThermalSim/: Component.py  Grid.py  Physics.py  Solver.py
tests/: comparisons.py  test_box.py  test_multilayer.py  test_physics.py  test_post.py  test_single_component.py
