[metadata]
name = NodalThermalSim
author = Sebastien Bocquet
url = https://github.com/SebastienBocquet/NodalThermalSim
description = Unsteady heat equation solver
long_description = file: README.md
license = MIT licence

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.7, <3.11
install_requires =
    pandas==1.5.0
    numpy==1.23.3
    scipy==1.9.1
    matplotlib==3.6.0
    pysolar
    anytree

[options.packages.find]
where = src

test =
    pytest

doc =
    tabulate
    sphinx == 4.4.0
    sphinx-autodoc-typehints
    sphinx_rtd_theme
    graphviz
    sphinx-math-dollar
    sphinxcontrib-bibtex